# Car_Rental_System

./: .env.example  .gitignore  CAR_REGISTRATION_FEATURE.md  DATABASE_FIX_REPORT.md  EMAIL_FIX_SUMMARY.md  EMAIL_SETUP.md  EMAIL_SETUP_GUIDE.md  GOOGLE_MAPS_SETUP.md  PAYMENT_SYSTEM_FIXES.md  QUICK_REFERENCE.md  README.md  REGISTRATION_FEATURE_STATUS.md  RENTAL_TRACKING_MAPS.md  add_drivers.py  app.py  check_drivers.py  config.py  models.py  pyproject.toml  requirements.txt  test_email.py  test_registration.py  test_registration_format.py
images/: AUDIA4.avif  Mahindrathar_1604486465203_1604486476898_1685168458776.avif  seltos-desktop.avif
routes/: admin.py  auth.py  customer.py  owner.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/admin/: dashboard.html  drivers.html  pending_cars.html  rentals.html  users.html
templates/auth/: login.html  register.html
templates/customer/: browse_cars.html  car_details.html  dashboard.html  payment.html  rentals.html
templates/owner/: add_car.html  dashboard.html  edit_car.html  my_cars.html  rentals.html
utils/: email_service.py  pdf_generator.py
